# fedora-kickstarts-python-classroom

./: .gitignore  .sparkleshare  AUTHORS  Fedora-15-ec2.ks  Makefile  Makefile.am  README  README.md  SparkleShare.txt  configure.ac  fedora-aos.ks  fedora-arm-base.ks  fedora-arm-desktop-vfat.ks  fedora-arm-desktop.ks  fedora-arm-kde.ks  fedora-arm-mate-vfat.ks  fedora-arm-mate.ks  fedora-arm-minimal-vfat.ks  fedora-arm-minimal.ks  fedora-arm-partitioning.ks  fedora-arm-server.ks  fedora-arm-vfat-partitioning.ks  fedora-arm-workstation.ks  fedora-arm-xbase.ks  fedora-atomic-vagrant.ks  fedora-atomic.ks  fedora-cinnamon-packages.ks  fedora-cloud-atomic-pxetolive.ks  fedora-cloud-atomic-vagrant.ks  fedora-cloud-atomic.ks  fedora-cloud-base-arm.ks  fedora-cloud-base-ppc.ks  fedora-cloud-base-vagrant.ks  fedora-cloud-base.ks  fedora-cloud-bigdata.ks  fedora-cloud-experimental.ks  fedora-desktop-packages.ks  fedora-docker-base-arm.ks  fedora-docker-base-ppc.ks  fedora-docker-base.ks  (+105 more)
atomic-installer/: lorax-configure-repo.tmpl  lorax-embed-repo.tmpl
custom/: README  fedora-live-base.ks  fedora-live-desktop.ks  fedora-live-mini.ks  fedora-live-minimization.ks  fedora-livecd-desktop.ks  fedora-livecd-kde.ks  fedora-livecd-lxde.ks  fedora-livedvd-haskell.ks  qa-test-day.ks
l10n/: fedora-live-workstation-de_CH.ks  fedora-live-workstation-de_DE.ks  fedora-live-workstation-fr_FR.ks  fedora-live-workstation-nl_NL.ks  fedora-live-workstation-pt_BR.ks  fedora-live-workstation-pt_PT.ks  fedora-live-workstation-ru_RU.ks  fedora-livecd-desktop-fr_FR.ks  fedora-livecd-kde-fr_FR.ks  (+3 more)
(+4 files in other folders)
